--- a/BlueDeployment/deployBlue.yml
+++ b/BlueDeployment/deployBlue.yml
@@ -7,11 +7,11 @@ spec:
   replicas: 2
   selector:
     matchLabels:
-      app: web
+      app: kubernetes-capstone-blue
   template:
     metadata:
       labels:
-        app: web
+        app: kubernetes-capstone-blue
     spec:
       containers:
         - name: kubernetes-capstone-blue
