--- a/BlueDeployment/deployBlue.yml
+++ b/BlueDeployment/deployBlue.yml
@@ -2,20 +2,26 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: udacity-devops-capstone-blue
-
+  labels:
+    app: udacity-devops-capstone-blue
 spec:
   replicas: 2
   selector:
     matchLabels:
       app: udacity-devops-capstone-blue
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: udacity-devops-capstone-blue
     spec:
       containers:
-        - name: udacity-devops-capstone-blue
-          image: austinmeyer/udacity-devops-capstone-blue:latest
-          imagePullPolicy: "Always"
+        - image: austinmeyer/udacity-devops-capstone-blue:latest
+          imagePullPolicy: Always
+          name: udacity-devops-capstone-blue
           ports:
-            - containerPort: 8080
+            - containerPort: 80
