--- a/BlueDeployment/serviceBlue.yml
+++ b/BlueDeployment/serviceBlue.yml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: udacity-devops-capstone-blue
-
+  labels:
+    app: udacity-devops-capstone-blue
 spec:
+  type: LoadBalancer
   selector:
     app: udacity-devops-capstone-blue
   ports:
-    - port: 8080
-      targetPort: 8080
-  type: LoadBalancer
+    - port: 80
+      targetPort: 80
+      nodePort: 30000
+      protocol: TCP
