--- a/BlueDeployment/serviceBlue.yml
+++ b/BlueDeployment/serviceBlue.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udacity-devops-capstone-blue
+  name: udacity-devops-capstone
   labels:
-    app: udacity-devops-capstone-blue
+    app: udacity-devops-capstone
 spec:
   type: LoadBalancer
   selector:
-    app: udacity-devops-capstone-blue
+    app: udacity-devops-capstone
   ports:
     - port: 80
       targetPort: 80
