--- a/GreenDeployment/serviceGreen.yml
+++ b/GreenDeployment/serviceGreen.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udacity-devops-capstone-green
+  name: udacity-devops-capstone
   labels:
-    app: udacity-devops-capstone-green
+    app: udacity-devops-capstone
 spec:
   type: LoadBalancer
   selector:
-    app: udacity-devops-capstone-green
+    app: udacity-devops-capstone
   ports:
     - port: 80
       targetPort: 80
