Changed dockerfile for failures

--- a/BlueDeployment/Dockerfile
+++ b/BlueDeployment/Dockerfile
@@ -1,3 +1,5 @@
+    mnmnbn cn bb
+
 FROM nginx:stable-alpine
 COPY ./index.html /usr/share/nginx/html/index.html
 RUN apk add --no-cache python3 py3-pip
