--- a/BlueDeployment/serviceBlue.yml
+++ b/BlueDeployment/serviceBlue.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udacity-devops-capstone
+  name: udacity-devops-capstone1
   labels:
     app: udacity-devops-capstone-blue
 spec:
