--- a/BlueDeployment/service.yml
+++ b/BlueDeployment/service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udacity-devops-capstone1
+  name: udacity-devops-capstone
   labels:
     app: udacity-devops-capstone-blue
 spec:
